syntax = "proto3";

package user;
option go_package="./pb";

message GetUserInfoReq {
  string UserId =1;
}
message GetUserInfoResp {
  string Avatar =1;
  string NickName  =2;
  string Name =3;
  string School =4;
  string Group =5;
  string Email =6;
  string StudentID =7;
  string QQ =8;

}

message SetUserInfoReq {
  string UserId =1;
  string Avatar =2;
  string NickName =3;
  string Name =4 ;
  string School =5;
  string QQ =6;
}
message SetUserInfoResp {
  bool Flag =1;
}

message SetUserTypeReq{
  string Email =1;
  string UserType =2;
}
message SetUserTypeResp{
  bool Flag =1;
}

message GetAdminListReq{
  string UserType =1;
}
message One {
  string UserId =1;
  string Nickname =2;
  string Avatar =3;
  string Name =4;
  string Email =5;
}
message GetAdminListResp{
  repeated One List =1;
}

message GetUserTypeReq {
  string UserId = 1;
}
message GetUserTypeResp {
  string UserType =1;
}
service userClient {
  rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoResp);
  rpc SetUserInfo(SetUserInfoReq)returns (SetUserInfoResp);
  rpc SetUserType(SetUserTypeReq)returns(SetUserTypeResp);
  rpc GetAdminList(GetAdminListReq)returns(GetAdminListResp);
  rpc GetUserType(GetUserTypeReq) returns(GetUserTypeResp);
}